--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
   <footer>
     <p>© 2025 IAIWAF — Built for the Brave.</p>
   </footer>
-</body>
-</html>body {
+{
   margin: 0;
   font-family: 'Share Tech Mono', monospace;
   background-color: #000;
@@ -125,3 +124,5 @@ footer {
   color: #777;
   background-color: #0b0b0b;
 }
+</body>
+</html>body
