--- a/index.html
+++ b/index.html
@@ -1,56 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>IAIWAF — If An If Was A Fifth</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <title>IAIWAF Video Hub</title>
+  <script type="module" src="firebase.js"></script>
+  <script type="module">
+    import { collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+    async function loadVideos() {
+      const q = query(collection(window.db, "videos"), orderBy("createdAt", "desc"));
+      const snapshot = await getDocs(q);
+      const videos = snapshot.docs.map(doc => doc.data());
+
+      const container = document.getElementById("videos");
+
+      if (videos.length === 0) {
+        container.innerHTML = "<p style='color:gray'>No videos uploaded yet.</p>";
+        return;
+      }
+
+      // Featured video
+      const [featured, ...rest] = videos;
+      container.innerHTML = `
+        <div>
+          <h2 style="color:red;font-size:24px">${featured.title}</h2>
+          <video src="${featured.url}" controls autoplay muted style="width:100%;max-width:700px;border-radius:10px"></video>
+        </div>
+        <hr style="margin:2rem 0;border-color:#333">
+        <div id="otherVideos" style="display:grid;gap:20px;grid-template-columns:repeat(auto-fit,minmax(250px,1fr))"></div>
+      `;
+
+      const other = document.getElementById("otherVideos");
+      rest.forEach(v => {
+        other.innerHTML += `
+          <div style="background:#111;padding:10px;border-radius:10px">
+            <video src="${v.url}" controls style="width:100%;border-radius:8px"></video>
+            <p style="color:white;text-align:center;margin-top:5px">${v.title}</p>
+          </div>
+        `;
+      });
+    }
+
+    window.onload = loadVideos;
+  </script>
+  <style>
+    body { background:black; color:white; font-family:Arial; text-align:center; padding:2rem; }
+  </style>
 </head>
 <body>
-  <div class="bg-pulse"></div>
-  <header class="site-header">
-    <div class="brand">
-      <h1 class="logo">IAIWAF</h1>
-      <div class="subtitle">If An If Was A Fifth</div>
-    </div>
-
-    <nav class="nav">
-      <a href="index.html" class="nav-link">Home</a>
-      <a href="videos.html" class="nav-link">Videos</a>
-      <a href="stories.html" class="nav-link">Stories</a>
-      <a href="marketplace.html" class="nav-link">Marketplace</a>
-    </nav>
-  </header>
-
-  <main class="container">
-    <section class="hero">
-      <h2 class="hero-title">Welcome to the Abyss</h2>
-      <p class="lead">Enter if you dare… the Internet Archive of Invisible, Weird, and Forgotten.</p>
-      <div class="ad-slot">Ad Slot — place your ad code here</div>
-    </section>
-
-    <section class="teaser-grid">
-      <article class="card">
-        <h3>Cryptic Videos</h3>
-        <p>Short found-footage pieces and eerie transmissions.</p>
-        <a class="btn" href="videos.html">View</a>
-      </article>
-      <article class="card">
-        <h3>Disturbing Stories</h3>
-        <p>Micro-fiction and hidden reports from the edge.</p>
-        <a class="btn" href="stories.html">Read</a>
-      </article>
-      <article class="card">
-        <h3>Marketplace</h3>
-        <p>Relics and limited drops — coming soon.</p>
-        <a class="btn" href="marketplace.html">Browse</a>
-      </article>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div>© 2025 IAIWAF — <strong>We'd all be drunk</strong></div>
-  </footer>
+  <h1 style="color:red">IAIWAF Video Hub</h1>
+  <div id="videos"></div>
 </body>
 </html>
