--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,8 @@
   <script type="module">
     import { ref, uploadBytesResumable, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
     import { collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-
+    import { db, storage } from "../lib/firebase.js";
+    
     let file = null;
 
     window.handleFileChange = (e) => {
