--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>IAIWAF Video Hub</title>
-  <script type="module" src="firebase.js"></script>
+  <script type="module">
+    // Paste the Firebase SDK snippet from step 1 here
+  </script>
   <script type="module">
     import { collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
@@ -19,7 +21,6 @@
         return;
       }
 
-      // Featured video
       const [featured, ...rest] = videos;
       container.innerHTML = `
         <div>
