--- a/admin.html
+++ b/admin.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>IAIWAF Admin Upload</title>
+
+  <!-- Firebase SDKs -->
   <script type="module">
-    // Paste the Firebase SDK snippet from step 1 here
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { getStorage } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyC7G9FFEZVFRx8Ml_H49tJTcMUbmOZYmQ4",
+      authDomain: "iaiwaf.firebaseapp.com",
+      projectId: "iaiwaf",
+      storageBucket: "iaiwaf.appspot.com",
+      messagingSenderId: "548868801867",
+      appId: "1:548868801867:web:a51be7e24ea9f1014d94ce"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    window.db = getFirestore(app);
+    window.storage = getStorage(app);
   </script>
+
+  <!-- Admin upload script -->
   <script type="module">
     import { ref, uploadBytesResumable, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
     import { collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
@@ -59,6 +78,7 @@
       );
     };
   </script>
+
   <style>
     body { background:black; color:red; font-family:Arial; text-align:center; padding:2rem; }
     input, button { padding:10px; border:none; border-radius:6px; margin:5px; }
